  functions for other floating-point types, now take pointer arguments to
  avoid signaling NaNs possibly being converted to quiet NaNs in argument
  passing.  This is in accordance with the resolution of Clarification
  Request 25 to TS 18661-1, as applied for C2X.  Existing binaries that pass
  floating-point arguments directly will continue to work.

Changes to build and runtime requirements:

  [Add changes to build and runtime requirements here]

Security related changes:

  [Add security related changes here]

The following bugs are resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]


Version 2.30

Major new features:

* Unicode 12.1.0 Support: Character encoding, character type info, and
  transliteration tables are all updated to Unicode 12.1.0, using
  generator scripts contributed by Mike FABIAN (Red Hat).

* The dynamic linker accepts the --preload argument to preload shared
  objects, in addition to the LD_PRELOAD environment variable.

* The twalk_r function has been added.  It is similar to the existing
  twalk function, but it passes an additional caller-supplied argument
  to the callback function.

* On Linux, the getdents64, gettid, and tgkill functions have been added.

* Minguo (Republic of China) calendar support has been added as an
  alternative calendar for the following locales: zh_TW, cmn_TW, hak_TW,
  nan_TW, lzh_TW.

* The entry for the new Japanese era has been added for ja_JP locale.

* Memory allocation functions malloc, calloc, realloc, reallocarray, valloc,
  pvalloc, memalign, and posix_memalign fail now with total object size
  larger than PTRDIFF_MAX.  This is to avoid potential undefined behavior with
  pointer subtraction within the allocated object, where results might
  overflow the ptrdiff_t type.

* The dynamic linker no longer refuses to load objects which reference